Bug 1529794 - Protect DirectWrite usage in gfxDWriteFontList::CreateFontEntry with an exception handler. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D165944